first commit of forgewise

--- a/public/og-image.html
+++ b/public/og-image.html
@@ -62,10 +62,10 @@
 <body>
     <div class="pattern"></div>
     <div class="container">
-        <h1 class="title">Allan</h1>
-        <p class="subtitle">eCommerce Director & Full-Stack Developer</p>
+        <h1 class="title">ForgeWise.io</h1>
+        <p class="subtitle">Practical eCommerce Strategies for Normal People</p>
         <p class="description">Building smart, scalable tools and user-first experiences through data-driven strategy and AI automation</p>
     </div>
-    <div class="logo">Allan.Resume</div>
+
 </body>
 </html>
